{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 165,
  "lineage": "8f23ff98-36ee-2479-40c4-4add86cfea9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c029a4b57edda9e",
            "arn": "arn:aws:ec2:ap-southeast-2:883652947662:instance/i-053fce3a3834a16ea",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053fce3a3834a16ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ea81af6406862fe8",
            "private_dns": "ip-10-0-20-253.ap-southeast-2.compute.internal",
            "private_ip": "10.0.20.253",
            "public_ip": "13.211.125.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d6773a7cbd3a046",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e85e58776dbab302",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d3ad4ca3e5f04816"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.my-ig",
            "aws_route.public-subnet-route",
            "aws_security_group.webserver-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-wp-blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:883652947662:internet-gateway/igw-041009b37170d24d3",
            "id": "igw-041009b37170d24d3",
            "owner_id": "883652947662",
            "tags": {
              "Name": "blog-ig"
            },
            "tags_all": {
              "Name": "blog-ig"
            },
            "vpc_id": "vpc-0c2cda005bee23a01"
          },
          "dependencies": [
            "aws_vpc.vpc-wp-blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-subnet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-041009b37170d24d3",
            "id": "r-rtb-072dd83b3dd4df67e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-072dd83b3dd4df67e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-ig",
            "aws_vpc.vpc-wp-blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:883652947662:security-group/sg-0f1d3e81eee86f15d",
            "description": "security group for database in private subnet",
            "egress": [],
            "id": "sg-0f1d3e81eee86f15d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.20.253/32"
                ],
                "description": "allow port 3306 from our webserver private ip",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "883652947662",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database"
            },
            "tags_all": {
              "Name": "database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2cda005bee23a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.webserver-instance",
            "aws_internet_gateway.my-ig",
            "aws_route.public-subnet-route",
            "aws_security_group.webserver-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-wp-blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:883652947662:security-group/sg-0d3ad4ca3e5f04816",
            "description": "allow http at port 80 and ssh at port 22 on webserver instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3ad4ca3e5f04816",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH for webserver",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http inbound traffic to webserver",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "883652947662",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2cda005bee23a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-wp-blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:883652947662:subnet/subnet-0be2b45b9266e6be0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-0be2b45b9266e6be0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883652947662",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0c2cda005bee23a01"
          },
          "dependencies": [
            "aws_vpc.vpc-wp-blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:883652947662:subnet/subnet-0c77e0e6a7d067426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.40.0/24",
            "id": "subnet-0c77e0e6a7d067426",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883652947662",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0c2cda005bee23a01"
          },
          "dependencies": [
            "aws_vpc.vpc-wp-blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:883652947662:subnet/subnet-0e85e58776dbab302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0e85e58776dbab302",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883652947662",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0c2cda005bee23a01"
          },
          "dependencies": [
            "aws_vpc.vpc-wp-blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-wp-blog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:883652947662:vpc/vpc-0c2cda005bee23a01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca10e5008626589b",
            "default_route_table_id": "rtb-072dd83b3dd4df67e",
            "default_security_group_id": "sg-04b8122f9366b5777",
            "dhcp_options_id": "dopt-05c881f3a5295b555",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c2cda005bee23a01",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-072dd83b3dd4df67e",
            "owner_id": "883652947662",
            "tags": {
              "Name": "blog"
            },
            "tags_all": {
              "Name": "blog"
            }
          }
        }
      ]
    }
  ]
}